Adicionando o footer da página

--- a/index.html
+++ b/index.html
@@ -54,21 +54,26 @@
     </article>
 
     <!--Descrição do palestrante e foto-->
-    <footer class="contEnd">
-        <section class="description">
-            <figure>
-                <img class="face" src="./images/face.jpg" alt="Foto do palestrante">
-            </figure>
-            <h2>O Palestrante</h2>
-            <p>Carlos Fontana é conhecido por dar palestras que abalam
-                a estrutura do marketing tradicional.
-                Prepare-se para sair do evento com uma nova visão do que é possível
-                ser feito para o seu negócio decolar.
-            </p>
-            <p>Formado em Marketing pela Universidade XYZ e fundador da MarkUp, a
-                empresa vencedora dos últimos 5 Prêmios MarketingBr.
-            </p>
+    <footer class="footerCont">
+        <div class="containerFoot">
+            <img class="face" src="./images/face.jpg" alt="">
+            <div class="description">
+                <h2>O Palestrante</h2>
+                <br>
+                <p>Carlos Fontana é conhecido por dar palestras que abalam
+                    a estrutura do marketing tradicional.
+                    Prepare-se para sair do evento com uma nova visão do que é possível
+                    ser feito para o seu negócio decolar.
+                </p>
+                <br>
+                <p>Formado em Marketing pela Universidade XYZ e fundador da MarkUp, a
+                    empresa vencedora dos últimos 5 Prêmios MarketingBr.
+                </p>
+            </div>
+        </div>
+
         </section>
+
     </footer>
 
 
